--- a/app/globals.css
+++ b/app/globals.css
@@ -25,16 +25,21 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-@keyframes marquee {
-  0% {
-    transform: translateX(100%);
-  }
-  100% {
-    transform: translateX(-100%);
-  }
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-.animate-marquee {
-  display: inline-flex;
-  animation: marquee 30s linear infinite;
+@layer utilities {
+  .animate-marquee {
+    animation: marquee 40s linear infinite;
+  }
+
+  @keyframes marquee {
+    0% {
+      transform: translateX(0%);
+    }
+    100% {
+      transform: translateX(-50%);
+    }
+  }
 }
